# smart-boids

./: Cargo.toml  README.md
src/: boid.rs  main.rs
