[package]
name = "smart-boids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bonsai-bt = "*"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
ggez = "0.7.0"
glam = "0.20.2"
rand = "0.8"